fixed heading alignment with padding

--- a/styles_Songs.css
+++ b/styles_Songs.css
@@ -12,7 +12,7 @@ body {
 
 h1 {
   font-family:Calibri, Arial, sans-serif;
-  padding-left: 50px;
+  padding-left: 20px;
   font-size: 90px;
 }
 
